# bot_project_hw2_python

./: .env.example  README.md  docker-compose.yml
auth_service/: .env.example  Dockerfile  README.md  pyproject.toml
auth_service/app/: main.py
auth_service/app/api/: deps.py  router.py  routes_auth.py
auth_service/app/core/: config.py  exceptions.py  security.py
auth_service/app/db/: base.py  models.py  session.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: auth.py  user.py
auth_service/app/usecases/: auth.py
auth_service/tests/: conftest.py  test_auth.py  test_security.py
bot_service/: .env.example  Dockerfile.api  Dockerfile.bot  Dockerfile.worker  README.md  bot.py  pyproject.toml
bot_service/app/: main.py
bot_service/app/bot/: dispatcher.py  handlers.py  middlewares.py
bot_service/app/core/: config.py  exceptions.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py  redis_operations.py
bot_service/app/services/: openrouter_client.py
bot_service/app/tasks/: llm_tasks.py
bot_service/tests/: conftest.py  test_jwt.py  test_openrouter.py  test_redis_operations.py
